--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "10.19.0"
   }
 }
