--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
   "name": "financemanagerces26back",
+  "main": "app.js",
+  "keywords": [
+    "example",
+    "heroku"
+  ],
+  "author": "Pedro",
+  "license": "MIT",
   "version": "0.0.0",
+  "description": "This example is so cool.",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "path": "^0.12.7"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
     "node": "10.19.0"
