--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mailgun-js": "^0.22.0",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.4.14",
     "path": "^0.12.7"
   },
   "scripts": {
