--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "This example is so cool.",
   "private": true,
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -20,7 +21,9 @@
     "mailgun-js": "^0.22.0",
     "morgan": "~1.9.1",
     "nodemailer": "^6.4.14",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^8.4.1",
+    "pg-format": "^1.0.4"
   },
   "scripts": {
     "start": "node server.js",
