--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "knex": "^0.21.6",
     "mailgun-js": "^0.22.0",
     "morgan": "~1.9.1",
     "nodemailer": "^6.4.14",
     "path": "^0.12.7",
     "pg": "^8.4.1",
-    "pg-format": "^1.0.4"
+    "pg-format": "^1.0.4",
+    "sqlite3": "^5.0.0"
   },
   "scripts": {
     "start": "node server.js",
