--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "sqlite3": "^5.0.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
