--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "helmet": "^4.2.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "knex": "^0.21.6",
     "mailgun-js": "^0.22.0",
     "morgan": "~1.9.1",
     "nodemailer": "^6.4.14",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pg": "^8.4.1",
     "pg-format": "^1.0.4",
